rearranged client's project struct

--- a/TODOs.org
+++ b/TODOs.org
@@ -1,4 +1,6 @@
-* TODO Chat Client
+* TODO [#A] Chat Client
+** TODO [#A] switch to DDD structure
+** TODO [#A] switch to use redux toolkit
 ** TODO [#C] check if browser supports websockets
 ** TODO replace react-quill with draft.js
 ** TODO add a documentation lib and add detailed documentations for everything. project structs, patterns etc
@@ -7,6 +9,7 @@
 ** TODO [Chat.tsx] create a chat init which calls ioConnect and registers new message/room [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/pages/chat/Chat.tsx::// TODO create a chat init which calls ioConnect and registers new message/room][src]] [2020-08-14 Fr]
 ** TODO [Chat.tsx] move all these to create message/create room action which calls ioEmit [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/pages/chat/Chat.tsx::// TODO move all these to create message/create room action which calls ioEmit][src]] [2020-08-14 Fr]
 ** TODO [middleware.ts] create interfaces based on contracts and used a validation lib here to verify data [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/store/middleware.ts::// TODO create interfaces based on contracts and used a validation lib here to verify data][src]] [2020-08-14 Fr]
+** TODO set up redux to localstorage backup/restore of server data (restore only if they are recent)
 * TODO Chat Api
 ** TODO [chat.gateway.ts] load most common data to redis [[file:/home/ggz/Dev/chat/apps/api-chat/src/app/chat.gateway.ts::// TODO load most common data to redis][src]] [2020-06-27 Sa]
 ** TODO [chat.gateway.ts] load metadata and latest messages from each room to redis [[file:/home/ggz/Dev/chat/apps/api-chat/src/app/chat.gateway.ts::// TODO load metadata and latest messages from each room to redis][src]] [2020-06-27 Sa]
