--- a/TODOs.org
+++ b/TODOs.org
@@ -1,4 +1,7 @@
-* TODO Chat Client
+* TODO [#A] Chat Client
+** TODO [#A] switch to DDD structure
+** TODO [#A] switch to use redux toolkit
+** TODO redux-persist
 ** TODO [#C] check if browser supports websockets
 ** TODO replace react-quill with draft.js
 ** TODO add a documentation lib and add detailed documentations for everything. project structs, patterns etc
@@ -7,6 +10,7 @@
 ** TODO [Chat.tsx] create a chat init which calls ioConnect and registers new message/room [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/pages/chat/Chat.tsx::// TODO create a chat init which calls ioConnect and registers new message/room][src]] [2020-08-14 Fr]
 ** TODO [Chat.tsx] move all these to create message/create room action which calls ioEmit [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/pages/chat/Chat.tsx::// TODO move all these to create message/create room action which calls ioEmit][src]] [2020-08-14 Fr]
 ** TODO [middleware.ts] create interfaces based on contracts and used a validation lib here to verify data [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/store/middleware.ts::// TODO create interfaces based on contracts and used a validation lib here to verify data][src]] [2020-08-14 Fr]
+** TODO set up redux to localstorage backup/restore of server data (restore only if they are recent)
 * TODO Chat Api
 ** TODO [chat.gateway.ts] load most common data to redis [[file:/home/ggz/Dev/chat/apps/api-chat/src/app/chat.gateway.ts::// TODO load most common data to redis][src]] [2020-06-27 Sa]
 ** TODO [chat.gateway.ts] load metadata and latest messages from each room to redis [[file:/home/ggz/Dev/chat/apps/api-chat/src/app/chat.gateway.ts::// TODO load metadata and latest messages from each room to redis][src]] [2020-06-27 Sa]
@@ -14,6 +18,7 @@
 ** TODO [create-message.handler.ts] create model first and generate tim from model, then send to redis [[file:/home/ggz/Dev/chat/apps/service-chat/src/app/application/commands/handlers/create-message.handler.ts::// TODO create model first and generate tim from model, then send to redis][src]] [2020-06-25 Do]
 ** TODO [create-message.handler.ts] turn class to object and add id, also remove id from model [[file:/home/ggz/Dev/chat/apps/service-chat/src/app/application/commands/handlers/create-message.handler.ts::// TODO turn class to object and add id, also remove id from model][src]] [2020-06-25 Do]
 ** TODO [chat.repository.ts] test performance diff between multi and sort for getting all messages [[file:/home/ggz/Dev/chat/apps/service-chat/src/app/infrastucture/repository/chat.repository.ts::// TODO test performance diff between multi and sort for getting all messages][src]] [2020-06-26 Fr]
+** TODO add expiration to everything stored in redis
 * TODO Chat Service History
 * TODO General Improvements
 ** TODO create nx plugin to run all dependant apps in production build in pm2 and only app in development in dev mode
@@ -23,3 +28,8 @@
 * ------ unsorted -------
 * TODO [types.ts] set up to fetch room info in saga then store [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/store/types.ts::// TODO set up to fetch room info in saga then store][src]] [2020-08-14 Fr]
 * TODO [saga.ts] add error handlers and data validators based on contracts [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/store/saga.ts::// TODO add error handlers and data validators based on contracts][src]] [2020-08-15 Sa]
+* IDEA Set up chat history service to be a rust service which will also encrypt messages before perm storing them, decrypt them to pass them to chat service
+* IDEA Set up rust graphql server and apollo graphql server and compare
+* IDEA Set up user service in deno
+* IDEA Set up clean up crew to delete inactive users and their messages, and another to delete unassociated data
+* TODO [middleware.ts] switch to redux toolkit utils [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/store/middleware.ts::// TODO switch to redux toolkit utils][src]] [2020-10-10 Sa]
