--- a/TODOs.org
+++ b/TODOs.org
@@ -31,3 +31,6 @@
 * IDEA Set up clean up crew to delete inactive users and their messages, and another to delete unassociated data
 * TODO add a 2nd api with graphql/rust server and create 2nd client that will use component lib and d3 to show user/messages charts statistic. delegate d3 data transformation to wasm
 * TODO [ChatMessageList.tsx] :add read status later `message.read` [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/modules/chat/components/MessageList/ChatMessageList.tsx::: // TODO add read status later `message.read`][src]] [2020-10-17 Sa]
+* TODO [#A] should data validations happen api/client/both
+* TODO [chat.gateway.ts] emit res here as well for consistancy [[file:/home/ggz/Dev/chat/apps/api-chat/src/app/chat.gateway.ts::// TODO emit res here as well for consistancy][src]] [2020-10-18 So]
+* TODO [actions.ts] move all in sagsa just to make their handlers more discoverable [[file:/home/ggz/Dev/chat/apps/client-chat/src/app/modules/chat/store/actions.ts::// TODO move all in sagsa just to make their handlers more discoverable][src]] [2020-10-18 So]
